Fix dark mode hypertext underline

--- a/custom.css
+++ b/custom.css
@@ -165,7 +165,7 @@ html.dark
 
 .prose :where(a:not(.card)):not(:where([class~="not-prose"] *)) {
   color: inherit;
-  border-bottom-color: #2d0f37 !important;
+  border-bottom-color: #2d0f37;
 }
 
 html.dark .prose :where(a:not(.card)):not(:where([class~="not-prose"] *)) {
